# edgeMatching

./: CMakeLists.txt  README.md
Chamfer/include/: Chamfer.hpp  Utils.hpp
Chamfer/src/: Chamfer.cpp  Utils.cpp
HOG/include/: HOGDetector.hpp
HOG/src/: HOGDetector.cpp
test/: test-angle-error.cpp  test-chamfer-matching.cpp  test-contours-orientation.cpp  test-find-contours.cpp  test-hog.cpp  test-line-reconstruction.cpp  test-polar-line.cpp
